@@ -2,8 +2,8 @@ Package: Modstrings
 Type: Package
 Title: Implementation of Biostrings to work with nucleotide sequences containing
    modified nucleotides
-Version: 1.3.2
-Date: 2019-12-01
+Version: 1.3.3
+Date: 2020-02-05
 Authors@R: c(person("Felix G.M.", 
                     "Ernst", 
                     email = "felix.gm.ernst@outlook.com", 
