@@ -93,6 +93,9 @@ NULL
 #' @param nc.type the type of nomenclature to be used. Either "short" or "nc".
 #' "Short" for m3C would be "m3C", "nc" for m3C would be "3C". (
 #' \code{default = "short"})
+#' @param stop.on.error For \code{combineIntoModstrings}: \code{TRUE}(default)
+#' or \code{FALSE}: Should an error be raised upon encounter of incompatible 
+#' positions?
 #' @param verbose For \code{combineIntoModstrings}: \code{TRUE} or \code{FALSE}
 #' (default): Should verbose information reported on the positions filled with 
 #' modifications? This settings is passed onto \code{\link{modifyNucleotides}}.
@@ -199,6 +202,12 @@ setMethod(
   if(is.null(nc)){
     return(gr)
   }
+  if(length(unique(nc)) == 1L){
+    return(unique(gr))
+  }
+  # this enforces a hierachy in the nomenclature the smallest numeric value is
+  # alsways put first
+  nc <- sort(nc)
   tmp <- IRanges::CharacterList(strsplit(nc,""))
   f <- tmp %in% (seq_len(10)-1L)
   base <- unique(unlist(tmp[!f]))
@@ -309,15 +318,16 @@ setMethod(
          call. = FALSE)
   }
   seqnames <- lapply(gr, function(z){as.character(seqnames(z))})
-  names <- lapply(gr, function(z){names(z)})
-  if(!all(unique(unlist(seqnames)) %in% names(x)) && 
-     !all(unique(unlist(names)) %in% names(x))){
+  if(is.null(names(x)) ||
+     !all(unique(unlist(seqnames)) %in% names(x))){
     stop("Names of XStringSet object do not match the seqnames or names in the",
          " elements of the GRangesList object.",
          call. = FALSE)
   }
   f <- names(x) %in% vapply(seqnames, unique, character(1))
-  if(any(max(end(gr)) > width(x[f]))){
+  m <- match(names(x),vapply(seqnames, unique, character(1)))
+  m <- m[!is.na(m)]
+  if(any(max(end(gr))[m] > width(x[f]))){
     stop("Elements of the GRangesList object contain coordinates out of bounds",
          " for the XStringSet object.",
          call. = FALSE)
@@ -487,9 +497,10 @@ setMethod(
   "combineIntoModstrings",
   signature = c(x = "XString", gr = "GRanges"),
   function(x, gr, with.qualities = FALSE, quality.type = "Phred",
-           verbose = FALSE, ...)
+           stop.on.error = TRUE, verbose = FALSE, ...)
   {
     .check_verbose(verbose)
+    .check_stop.on.error(stop.on.error)
     x <- as(x,
             paste0("Mod",
                    seqtype(x),
@@ -499,7 +510,9 @@ setMethod(
     at <- .pos_to_logical_matrix(as(x, paste0(seqtype(x), "StringSet")),
                                  list(start(gr)))
     ans_seq <- modifyNucleotides(x, as.vector(at), S4Vectors::mcols(gr)$mod,
-                                 nc.type = nc.type, verbose = verbose)
+                                 nc.type = nc.type, 
+                                 stop.on.error = stop.on.error,
+                                 verbose = verbose)
     if(!with.qualities){
       return(ans_seq)
     }
@@ -514,26 +527,30 @@ setMethod(
   "combineIntoModstrings",
   signature = c(x = "XStringSet", gr = "GRangesList"),
   function(x, gr, with.qualities = FALSE, quality.type = "Phred",
-           verbose = FALSE, ...)
+           stop.on.error = TRUE, verbose = FALSE, ...)
   {
     .check_verbose(verbose)
+    .check_stop.on.error(stop.on.error)
     if(!assertive::is_a_bool(with.qualities)){
       stop("with.qualities has to be TRUE or FALSE.")
     }
     quality.type <- match.arg(quality.type, c("Phred", "Solexa", "Illumina"))
     gr <- .norm_GRangesList_for_combine(x, gr)
+    m <- match(names(x),names(gr))
+    f <- !is.na(m)
+    m <- m[f]
     if (!S4Vectors::isConstant(width(x))){
-      at <- .pos_to_logical_list(as(x, paste0(seqtype(x), "StringSet")),
-                                 lapply(gr, start))
+      at <- .pos_to_logical_list(as(x, paste0(seqtype(x), "StringSet"))[f],
+                                 lapply(gr, start)[m])
     } else {
-      at <- .pos_to_logical_matrix(as(x, paste0(seqtype(x), "StringSet")),
-                                   lapply(gr, start))
+      at <- .pos_to_logical_matrix(as(x, paste0(seqtype(x), "StringSet"))[f],
+                                   lapply(gr, start)[m])
     }
-    f <- names(x) %in% names(gr)
     ans_seq <- modifyNucleotides(x[f], at, 
-                                 lapply(gr,function(z){
+                                 lapply(gr[m],function(z){
                                    S4Vectors::mcols(z)$mod
                                  }),
+                                 stop.on.error = stop.on.error,
                                  verbose = verbose)
     ans_seq <- c(ans_seq,x[!f])
     ans_seq <- ans_seq[match(names(x),names(ans_seq))]
@@ -550,9 +567,10 @@ setMethod(
   "combineIntoModstrings",
   signature = c(x = "XStringSet", gr = "GRanges"),
   function(x, gr, with.qualities = FALSE, quality.type = "Phred",
-           verbose = FALSE, ...)
+           stop.on.error = TRUE, verbose = FALSE, ...)
   {
     .check_verbose(verbose)
+    .check_stop.on.error(stop.on.error)
     if(!assertive::is_a_bool(with.qualities)){
       stop("with.qualities has to be TRUE or FALSE.")
     }
@@ -562,21 +580,24 @@ setMethod(
       gr <- split(gr, seqnames(gr))
       gr <- gr[!vapply(gr,is.null,logical(1))]
     } else {
-      gr <- split(gr, names(gr))
+      gr <- split(unname(gr), names(gr))
     }
     gr <- .norm_GRangesList_for_combine(x, gr)
+    m <- match(names(x),names(gr))
+    f <- !is.na(m)
+    m <- m[f]
     if (!S4Vectors::isConstant(width(x))){
-      at <- .pos_to_logical_list(as(x, paste0(seqtype(x), "StringSet")),
-                                 lapply(gr, start))
+      at <- .pos_to_logical_list(as(x, paste0(seqtype(x), "StringSet"))[f],
+                                 lapply(gr, start)[m])
     } else {
-      at <- .pos_to_logical_matrix(as(x, paste0(seqtype(x), "StringSet")),
-                                   lapply(gr, start))
+      at <- .pos_to_logical_matrix(as(x, paste0(seqtype(x), "StringSet"))[f],
+                                   lapply(gr, start)[m])
     }
-    f <- names(x) %in% names(gr)
     ans_seq <- modifyNucleotides(x[f], at,
-                                 lapply(gr,function(z){
+                                 lapply(gr[m],function(z){
                                    S4Vectors::mcols(z)$mod
                                  }),
+                                 stop.on.error = stop.on.error,
                                  verbose = verbose)
     ans_seq <- c(ans_seq,x[!f])
     ans_seq <- ans_seq[match(names(x),names(ans_seq))]
