@@ -3,3 +3,5 @@ Changes in version 0.99.0 (2019-01-15)
 
 Changes in version 1.3 (2019-12-01)
 + Display ModDNA and ModRNA sequences in color
++ combineIntoModstrings() is now 'vectorized' for multiple sequences. Sequences with the same name are treated independently and are modified equally
++ add stop.on.error option for combineIntoModstrings()
